[project]
name = "foxglove-fdw"
version = "0.1.0"
description = "Multicorn2 FDW exposing Foxglove Data Platform"
requires-python = ">=3.11"
dependencies = [
    "lz4>=4.4.4",
    "mcap-protobuf-support>=0.5.3",
    "mcap>=1.3.0",
    "multicorn @ git+https://github.com/pgsql-io/multicorn2.git@v3.0",
    "protobuf>=6.32.0",
    "requests>=2.32",
    "zstandard>=0.24.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.10",
    "types-protobuf>=6.30.2.20250809",
    "types-requests>=2.32.4.20250611",
]

[project.entry-points."multicorn.fdw"]
foxglove_coverage = "foxglove_fdw.coverage:FoxgloveCoverageFDW"
foxglove_devices = "foxglove_fdw.devices:FoxgloveDevicesFDW"
foxglove_events = "foxglove_fdw.events:FoxgloveEventsFDW"
foxglove_recording_attachments = "foxglove_fdw.recording_attachments:FoxgloveRecordingAttachmentsFDW"
foxglove_recordings = "foxglove_fdw.recordings:FoxgloveRecordingsFDW"
foxglove_topics = "foxglove_fdw.topics:FoxgloveTopicsFDW"
foxglove_messages = "foxglove_fdw.messages:FoxgloveMessagesFDW"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"

# multicorn does not ship type hints or a py.typed marker. Suppress just for it.
[[tool.mypy.overrides]]
module = "multicorn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "multicorn.*"
ignore_missing_imports = true
